apps/plex/plex-Namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: plex
  labels:
    istio-injection: enabled
    app-name: plex
    version: ${PLEX_VERSION}
    component: media-server
    hostNetwork: "yes"
    internal-service: "no"
    managed-by: chynten
    created-by: chynten
