apps/plex/plex-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-svc
  namespace: plex
  labels:
    app-name: plex
    version: ${PLEX_VERSION}
    component: "Media Server"
    hostNetwork: "yes"
    internal-service: "no"
    managed-by: chynten
    created-by: chynten
spec:
  type: ClusterIP
  ports:
    - name: pms
      port: 32400
      protocol: TCP
      targetPort: 32400
  selector:
    app-name: plex
